# Harmonis-Prime

./: .dockerignore  .gitignore  ARCHITECTURE.md  ARTIFACT_CHECKLIST.md  AUTHORS.md  BENCHMARKS.md  BENCHMARK_SPEC.md  BRICK_STATUS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Cargo.toml.backup  Dockerfile  EXPECTED_OUTPUTS.md  FOUNDER.md  HARMONIS_DASHBOARD.md  HarmonisPrime_Posts.csv  Harmonis_Prime_HBS1_1.html  INDUSTRIAL_ATTESTATION.txt  KNOWN_LIMITATIONS.md  LICENSE  LIMITATIONS.md  LIMITATIONS_CONSENSUS.md  PERFORMANCE.md  README.md  REPRODUCIBILITY.md  REPRODUCTION.md  REPRODUCTION_LOG.md  SEAL.txt  SPEC.md  STATUS.md  WHITEPAPER.md  WHITEPAPER_HBS1_1.md  audit_report.txt  brick46_fail_log.txt  build_report.txt  certification_report.txt  chaos_test_log.txt  check_output.txt  clippy_morning.txt  (+12 more)
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: set-6c-validation-tracker.md
.github/workflows/: rust.yml  rust.ymlxcc
backup_BRICK23_20260530_095518/: errors.rs  federation_router.rs  lib.rs  raft_engine.rs  rpc.rs  types.rs  wal.rs
backup_BRICK24_20260530_103344/: Cargo.toml  cluster_identity.rs  config.rs  cross_cluster_client.rs  cross_cluster_router.rs  engine.rs  federated_leader.rs  global_gateway.rs  global_log_replicator.rs  global_registry.rs  lib.rs  state_machine.rs  types.rs
baselines/: README.md
benches/: zeta_scalar_baseline.rs
data/regression/: baseline_schema.json  demo_current.json  history.json  m291_design_report.json  m291_report.json  m292_report.json  m293_design_report.json  m293_implementation_report.json  m300_decision_report.json  m310_integration_report.json  m320_simulation_report.json  per_class_report.json  report.json  report_final.json
docs/: FORMAL_METHODS.md  LICENSE  LIMITATIONS.md  REPRODUCTION.md  SAT_2027_Dashboard.md  SPEC.md  TELEMETRY.md  WHITEPAPER_HBS2_0.md  challenge blue print.txt  🧱 HARMONIS PRIME – COMPLETE CONSOL.txt master blue print.txt
grafana/: dashboard.json  dashboard_v620.json
instances/m29_test/: config_invalid.json  config_strict_invalid.json  config_strict_valid.json  config_valid.json
scripts/: benchmark_ci.sh  cactus_plot.py  generate_sbom_placeholder.ps1  par2_score.py  per_class_report.py  pre_commit_gate.ps1  regression_ci.sh  regression_detect.py  requirements.txt  verify_compiler.ps1
scripts/m29_preflight/: bft_cnf_generator.py  check_tla.sh  horn_sat_validator.py  m29_master.sh  preflight.sh  preflight_m291.py
scripts/m29_tla/: run_tlc_m292.sh
scripts/m30_decision/: bft_cnf_scaled.py  check_tlc.sh  horn_sat_tightened.py  m30_master.sh
scripts/m31_master/: phi_master_compiler.py
specs/tla/: BenchmarkRunner.cfg  BenchmarkRunner.tla
src/: brick41_smoke_test.rs  cli.rs  cluster_identity.rs  config.rs  cross_cluster_client.rs  cross_cluster_router.rs  engine.rs  errors.rs  federated_leader.rs  federation_router.rs  global_gateway.rs  global_log_replicator.rs  global_registry.rs  lib.rs  raft_engine.rs  rpc.rs  state_machine.rs  types.rs
src/airgap/: entropy.rs  firewall.rs  mesh.rs  mod.rs  node.rs  tests.rs
src/audit/: differential.rs  mod.rs  reference_solver.rs
src/autonomy/: goal_engine.rs  mod.rs  policy_runtime.rs  resource_allocator.rs  self_correction.rs
src/bench/: harness.rs  mod.rs
src/benchmark/: comparator.rs  exporter.rs  history.rs  mlperf_telemetry.rs  mod.rs  runner.rs
src/brick41/: mod.rs
src/brick42/: mod.rs
src/brick45/: mod.rs
src/brick46/: cognitive.rs  fluid_flow.rs  homeostasis.rs  mod.rs  quantum_synapse.rs  sensorimotor.rs  types.rs
src/brick47/: causal_graph.rs  counterfactual.rs  decision_loop.rs  drift.rs  governance.rs  mod.rs  reasoning.rs  temporal_memory.rs  types.rs
src/brick48/: edge_commander.rs  foresight_engine.rs  mod.rs  predictive_core.rs  remediation_orchestrator.rs  self_optimizer.rs  types.rs
src/brick49/: byzantine_guard.rs  causality_engine.rs  formal_prover.rs  lineage_ledger.rs  mod.rs  types.rs
src/brick50/: autoformalization_engine.rs  fractal_tensor_processor.rs  mod.rs  quantum_classical_coupling.rs  self_correction_grid.rs  silence_protocol_interface.rs  test_time_scaling.rs
src/brick51/: awareness_monitor.rs  cognitive_mesh.rs  collective_reasoning.rs  explainability_engine.rs  goal_registry.rs  hardware_tag.rs  knowledge_ledger.rs  mod.rs  physical_interface.rs  recovery_engine.rs  self_model_engine.rs  shared_memory_graph.rs  statistical_runner.rs  trust_registry.rs
src/cre/: bayesian_network.rs  causal_graph.rs  causal_inference.rs  causal_memory.rs  (+3 more)
tests/: airgap_integration.rs  airgap_invariant.rs  brick45_chaos_main.rs  brick46_nervous_system.rs  brick47_certification.rs  brick48_certification.rs  brick49_certification.rs  brick50_certification.rs  brick51_certification.rs  cluster_invariant.proptest-regressions  cluster_invariant.rs  dag_invariant.proptest-regressions  dag_invariant.rs  endurance_invariant.rs  py_bindings_test.py  quantum_invariant.rs  raft_cluster.rs  ramanujan_invariant.proptest-regressions  ramanujan_invariant.rs  rapl_invariant.rs  thermo_invariant.rs
(+189 files in other folders)
