[package]
name = "sovereign_core"
version = "6.2.0"
edition = "2021"
authors = ["Harmonis Prime Architect"]
description = "SovereignCore Rust substrate"

[lib]
name = "sovereign_core"
crate-type = ["cdylib", "rlib"]

[dependencies]
hex = "0.4"
sha2 = "0.10"
pyo3 = ">=0.24.1"
serde = { version = "1.0", features = ["derive"] }
rand = "0.8"
serde_json = "1.0"
md5 = "0.7"

[[bin]]
name = 'harmonis'
path = 'src/bin/harmonis.rs'






