[package]
name = "sovereign_core"
version = "6.2.0"
edition = "2021"
authors = ["Harmonis Prime Architect"]
description = "SovereignCore Rust substrate"

[lib]
name = "sovereign_core"
crate-type = ["cdylib", "rlib"]

# Binary targets are temporarily disabled to allow integration tests to pass
# They will be restored once the module structure is fully fixed.
# [[bin]]
# name = "benchmark"
# path = "src/bin/benchmark.rs"

# [[bin]]
# name = "benchmark_consensus"
# path = "src/bin/benchmark_consensus.rs"

# [[bin]]
# name = "harmonis"
# path = "src/bin/harmonis.rs"

[dependencies]
hex = "0.4"
sha2 = "0.10"
pyo3 = ">=0.24.1"
serde = { version = "1.0", features = ["derive"] }
rand = "0.8"
serde_json = "1.0"
md5 = "0.7"
petgraph = "0.6"
thiserror = "1.0"
rand_chacha = "0.3"
rand_core = "0.6"
hmac = "0.12"

[dev-dependencies]
proptest = "1.4"










