[package]
name = "sovereign_core"
version = "6.2.0"
edition = "2021"
authors = ["Harmonis Prime Architect"]
description = "SovereignCore Rust substrate"

[lib]
name = "sovereign_core"
crate-type = ["cdylib", "rlib"]

# Binary targets are temporarily disabled to allow integration tests to pass
# They will be restored once the module structure is fully fixed.
# [[bin]]
# name = "benchmark"
# path = "src/bin/benchmark.rs"

# [[bin]]
# name = "benchmark_consensus"
# path = "src/bin/benchmark_consensus.rs"

# [[bin]]
# name = "harmonis"
# path = "src/bin/harmonis.rs"

# SET-12: Feature flags for MPFR Z(t) oracle
# mpfr = true → 400-bit rug::Float path (requires GMP/MPFR C libraries)
# mpfr = false → f64 fallback path (works on Windows, no external deps)
[features]
default = []
mpfr = ["rug"]
python = ["pyo3"]

[dependencies]
libc = "0.2"
hex = "0.4"
sha2 = "0.10"
pyo3 = { version = ">=0.24.1", optional = true }
serde = { version = "1.0", features = ["derive"] }
rand = "0.8"
serde_json = "1.0"
md5 = "0.7"
petgraph = "0.6"
thiserror = "1.0"
rand_chacha = "0.3"
# M2.7.14: Benchmark Execution Layer dependencies
clap = { version = "4.5", features = ["derive"] }
csv = "1.3"
rusqlite = { version = "0.32", features = ["bundled"] }
rand_core = "0.6"
hmac = "0.12"
fastrand = "2.4.1"

# SET-12: MPFR high-precision arithmetic (optional, Linux/macOS only)
# LIMITATION: Windows compilation may fail due to GMP/MPFR C library dependencies.
# When unavailable, the f64 fallback path is automatically activated.
# Feature flag 'mpfr' controls inclusion. Default: disabled.
rug = { version = "1.24", optional = true }
ring = "0.17.14"
ureq = "3.3.0"
blake3 = "1.8.5"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.4"

# SET-12: Criterion benchmark for MPFR oracle vs f64 fallback
[[bench]]
name = "zeta_scalar_baseline"
harness = false

# SET-12: Additional benchmark target for MPFR Z(t) oracle
# LIMITATION: Only runs when mpfr feature is enabled
[[bench]]
name = "mpfr_zeta"
path = "src/mpfr_zeta/benchmark.rs"
harness = false

[[bin]]
name = "sat_solver"
path = "src/bin/sat_solver.rs"

# M2.7.14: Benchmark Execution Layer
[[bin]]
name = "benchmark_runner"
path = "src/bin/benchmark_runner.rs"
