[package]
name = "sovereign_core"
version = "6.2.0"
edition = "2021"
authors = ["Harmonis Prime Architect"]
description = "SovereignCore Rust substrate"

[lib]
name = "sovereign_core"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.21", features = ["extension-module"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
md5 = "0.7"